<resources>
    <string name="app_name">SIP</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">Login</string>
    <string name="logo">LOGO</string>
    <string name="enter_name">Your Email</string>
    <string name="password">Your Password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="register_title">Register</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="new_to_sip">New to SIP?</string>

    <string name="default_step">0</string>
    <string name="step_s">step(s)</string>
    <string name="start_step">Start</string>
    <string name="stop_step">Stop</string>
    <string name="share_step">SHARE</string>
    <string name="history">HISTORY</string>
    <string name="step_goal_pref">step_goal</string>
    <string name="integrate_pref">integrate_sip</string>
    <string name="logout_pref">logout_pref_button</string>
    <string name="sensor_select_pref">sensor_select</string>
    <string-array name="sensor_list">
        <item>Accelerometer (less accurate)</item>
        <item>Pedometer (best)</item>
    </string-array>
    <string-array name="sensor_list_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="tab_homepage">Home</string>
    <string name="tab_history">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heart">HEART</string>
    <string name="title_activity_history_content">History</string>
<<<<<<< HEAD
=======
    <string name="xxx_steps">XXX steps</string>
    <string name="lit_if_the_current_history_item_reached_it_s_goal">Lit if the current history item reached it\'s goal</string>
    <string name="reminder_pref">reminders</string>
    <string name="reminder_pref_positive">Will be notified for daily step reminders</string>
    <string name="reminder_pref_negative">Will not receive daily reminders</string>
>>>>>>> 02bb35bde5c9571d4a018bc1f5efcb94a245ff00
</resources>
