<?xml version = "1.0" encoding = "utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="75dp"
        android:paddingRight="20dp"
        android:paddingBottom="100dp"
        android:background="#6cd6cd"
        tools:context=".Login">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="208dp"
            android:layout_height="191dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/main_logo" />

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:focusable="true"
            android:hint="@string/enter_name"
            android:inputType="text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameField"
            android:layout_alignEnd="@+id/usernameField"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/goToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_to_sip"
            android:layout_below="@id/passwordField"
            android:layout_marginBottom="50dp"
            android:onClick="goToRegister"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-89dp"
            android:layout_centerHorizontal="true"
            android:text="@string/login_title" />

    </RelativeLayout>
</ScrollView>
