<?xml version = "1.0" encoding = "utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingLeft="20dp"
        android:paddingTop="50dp"
        android:paddingRight="20dp"
        android:paddingBottom="100dp"
        tools:context=".Register">

        <TextView
            android:id="@+id/loginView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/register_title"
            android:textColor="@color/colorGrey"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="208dp"
            android:layout_height="191dp"
            android:layout_below="@+id/loginView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/main_logo" />

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:focusable="true"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameField"
            android:layout_alignEnd="@+id/usernameField"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/confPasswordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordField"
            android:layout_alignEnd="@+id/passwordField"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/goToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confPasswordField"
            android:layout_marginBottom="50dp"
            android:onClick="goToLogin"
            android:text="@string/already_have_account"
            android:textColor="@color/colorGrey" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/goToRegister"
            android:background="@drawable/buttonshape"
            android:onClick="register"
            android:text="@string/register_title"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>
</ScrollView>